--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,15 +24,15 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-setuptools = "^41.4.0"
+setuptools = "^45.2.0"
 typing-extensions = "^3.7.4"
 
 [tool.poetry.dev-dependencies]
-isort = "^4.3"
-mypy = "^0.730.0"
+isort = "^4.3.21"
+mypy = "^0.761"
 black = "^19.10b0"
 autoflake = "^1.3.1"
 
 [build-system]
-requires = ["poetry>=1.0.0b9"]
+requires = ["poetry>=1.0.0"]
 build-backend = "poetry.masonry.api"
